# kilimo-mcp

./: CONTRIBUTING.md  Dockerfile  README.md  glama.json  pyproject.toml  smithery.yaml
.github/workflows/: ci.yml
src/kilimo_mcp/: __init__.py  server.py
