[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kilimo-mcp"
version = "0.1.1"
description = "MCP server for Kenya precision agriculture — crop calendar, fertilizer guide, pe"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = ["fastmcp>=0.9"]

[project.scripts]
kilimo-mcp = "kilimo_mcp.server:mcp.run"

[tool.setuptools.packages.find]
where = ["src"]
