[project.urls]
Homepage = "https://github.com/gabrielmahia/kilimo-mcp"
Repository = "https://github.com/gabrielmahia/kilimo-mcp"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kilimo-mcp"
version = "0.1.1"
description = "MCP server for Kenya precision agriculture — crop calendar, fertilizer guide, pe"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = ["fastmcp>=0.9"]

[project.scripts]
kilimo-mcp = "kilimo_mcp.server:mcp.run"

[tool.setuptools.packages.find]
where = ["src"]
